added pie chart

--- a/visualizations.html
+++ b/visualizations.html
@@ -45,6 +45,15 @@
         <line x1="300" y1="75" x2="350" y2="150" style="stroke:black;stroke-width:2" />
     </svg>
 
+    <svg width="400" height="400" viewbox="0 0 400 400">
+        <circle r="200" cx="200" cy="200" fill="yellow" />
+        <circle r="100" cx="200" cy="200" fill="transparent" 
+          stroke="green"
+          stroke-width="200"
+          stroke-dasharray="calc((12.5 * 1256.637) / 100) 1256.637" 
+          transform="rotate(-90) translate(-400)"/>    
+    </svg>
+
 </body>
 
 </html>
